--- a/arch/arm64/boot/dts/xilinx/iveia-atlas-ii-z8.dts
+++ b/arch/arm64/boot/dts/xilinx/iveia-atlas-ii-z8.dts
@@ -388,12 +388,15 @@
 	phys = <&lane0 PHY_TYPE_USB3 0 2 26000000>;
 };
 
+
+
 &usb1 {
 	status = "okay";
 };
 
 &dwc3_1 {
 	status = "okay";
-	dr_mode = "otg";
+	dr_mode = "peripheral";
+	maximum-speed = "high-speed";
 };
 
