--- a/arch/arm64/boot/dts/xilinx/iveia-atlas-ii-z8.dts
+++ b/arch/arm64/boot/dts/xilinx/iveia-atlas-ii-z8.dts
@@ -198,17 +198,18 @@
 		#stream-id-cells = <1>;
 		iommus = <&smmu 0x877>;
 		power-domains = <&pd_eth3>;
-		phy-mode = "sgmii";
-		phy-names = "sgmii-phy";
-	        phy-handle = <&rogue_phy0>;
-	        use-internal-mdio = <1>;	
+        phy-mode = "sgmii";
+        phy-names = "sgmii-phy";
 
-        vpx1_phy0: phy@0 {
+            phy-handle = <&vpx_1_phy0>;
+            use-internal-mdio = <1>;
+
+        vpx_1_phy0: phy@0 {
             compatible = "ethernet-phy-ieee802.3-c22";
             device_type = "ethernet-phy";
-            reg = <0>;
+            reg = <1>;
         };
-    };
+        };
 
 	iv_io_00096_gem: iv_io_00096_ethernet@ff0e0000 {
 		compatible = "cdns,zynqmp-gem";
@@ -257,7 +258,7 @@
         aurora_phy0: phy@0 {
             compatible = "ethernet-phy-ieee802.3-c22";
             device_type = "ethernet-phy";
-            reg = <0>;
+            reg = <1>;
         };
         };
 
